--- a/amr/02-iea15-2WT/IEA-15-240-RWT-amr/DISCON_Offset1.IN
+++ b/amr/02-iea15-2WT/IEA-15-240-RWT-amr/DISCON_Offset1.IN
@@ -144,7 +144,7 @@
 0.707000000000        ! PA_Damping        - Pitch actuator damping ratio [-, unused if PA_Mode = 1]
 
 !------- Pitch Actuator Faults -----------------------------------------------------
- 0.00000000  0.00000000  0.00000000                 ! PF_Offsets     - Constant blade pitch offsets for blades 1-3 [rad]
+-0.01745  -0.01745  -0.01745     ! PF_Offsets  0.01745=1deg    - Constant blade pitch offsets for blades 1-3 [rad]
 
 !------- Active Wake Control -----------------------------------------------------
 1                     ! AWC_NumModes       - Number of user-defined AWC forcing modes 
